# ShadowSpeak

./: .gitignore  AGENTS.md  README.md
.claude/: CLAUDE.md
.github/agents/: agent-selector.agent.md  codex-selector.agent.md
backend/: .env.dev.example  .env.example  .gitignore  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/routes/: content.py  health.py  profile.py  session.py
backend/app/core/: auth.py  config.py  deps.py  envelope.py  errors.py  middleware.py
backend/app/db/: __init__.py  dynamodb.py
backend/app/logging/: audit.py
backend/app/models/: __init__.py  auth.py  common.py  content.py  session.py
backend/app/repositories/: consent_repository.py  memory.py  profile_repository.py  purge_repository.py
backend/app/services/: consent_service.py  profile_service.py  purge_service.py  rekey_service.py
backend/tests/: conftest.py  test_account_deletion.py  test_api.py  test_auth.py  test_config.py  test_consent.py  test_middleware.py  test_onboarding_progress.py  test_profile.py  test_purge.py  test_rekey.py
frontend/: App.tsx  README.md  app.json  package-lock.json  package.json  thumbnails-caching-guide.md
frontend/src/: assets.ts  theme.ts
helper/: README.md
helper/docker/: .env.example  docker-compose.dev.yml
helper/mockserver/: .env.example  .gitignore  LICENSE  README.md  package-lock.json  package.json  server.js  test.js
helper/postman/: keycloak-local.postman_collection.json  keycloak-local.postman_environment.json
scripts/: README.md  backend  dev_services  mock_server
(+71 files in other folders)
