[project]
name = "shadowspeak-backend"
version = "0.1.0"
description = "FastAPI backend for the ShadowSpeak MVP."
requires-python = ">=3.12"
dependencies = [
  "email-validator==2.3.0",
  "fastapi==0.136.1",
  "mangum==0.21.0",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.1",
  "uvicorn[standard]==0.47.0"
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "pytest==9.0.3",
  "ruff==0.15.13"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "UP046", "UP047"]
